<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_core_generators</name>
  <version>0.3.1</version>
  <description>A configuration package defining core ROS interface generators.</description>

  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_cpp</buildtool_export_depend>

  <!-- Explicit group resolution - see ros-infrastructure/catkin_pkg#369 -->
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_generator_cpp</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_generator_py</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_fastrtps_c</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_introspection_c</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_fastrtps_cpp</buildtool_export_depend>
  <buildtool_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_introspection_cpp</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <group_depend>rosidl_generator_packages</group_depend>
  <group_depend>rosidl_typesupport_c_packages</group_depend>
  <group_depend>rosidl_typesupport_cpp_packages</group_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
