<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_core_runtime</name>
  <version>0.3.1</version>
  <description>A configuration package defining runtime dependencies for core ROS interfaces.</description>

  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Explicit group resolution - see ros-infrastructure/catkin_pkg#369 -->
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_generator_py</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_runtime_c</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_runtime_cpp</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_c</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_cpp</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_fastrtps_c</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_introspection_c</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_fastrtps_cpp</build_export_depend>
  <build_export_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">rosidl_typesupport_introspection_cpp</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <group_depend>rosidl_runtime_packages</group_depend>
  <group_depend>rosidl_typesupport_c_packages</group_depend>
  <group_depend>rosidl_typesupport_cpp_packages</group_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
